<resources>
    <string name="app_name">Logistics</string>
    <string name="sDashboard">Dashboard</string>
    <string name="sTank">Tank</string>
    <string name="sTankFilling">Tank filling</string>
    <string name="sLog">Log</string>
    <string name="sInventory">Inventory</string>
    <string name="inventory">Inventory</string>
    <string name="baseUrl">https://cryogenetics-logistics-solution.azurewebsites.net/api/</string>

    <string name="usernamePlaceholder">Username Placeholder</string>
    <string name="hashNr">#Nr</string>
    <string name="notifcations">Notifcations</string>
    <string name="inovice">Inovice</string>
    <string name="status">Status</string>
    <string name="last_filled">Last filled</string>
    <string name="client">Client</string>
    <string name="location">Location</string>
    <string name="filterbutton">Filter</string>
    <string name="ActLog">Act Log</string>

    <!-- Json Ids, used in tags to fetch json data, ask Axel -->
    <string name="action">action</string>
    <string name="act">act</string>
    <string name="adr">address</string>
    <string name="cli">client_name</string>
    <string name="cmt">comment</string>
    <string name="cnt">container</string>
    <string name="dat">date</string>
    <string name="inv">inventory</string>
    <string name="ivo">invoice</string>
    <string name="rId">responsible_id</string>
    <string name="id">id</string>
    <string name="lFi">last_filled</string>
    <string name="mod">model</string>
    <string name="sign">Sign</string>
    <string name="comment">Comment</string>
    <string name="time">Time</string>
    <string name="sta">container_status_name</string>
    <string name="maint">maintenance_needed</string>
    <string name="serial">container_sr_number</string>
    <string name="serialNr">SerialNr</string>
    <string name="date">date</string>
    <string name="alias">employee_alias</string>
    <string name="write_here">Write here</string>
    <string name="search">Search</string>
    <string name="CompleteLog">Complete Log</string>
    <string name="current_container">Current container:</string>
    <string name="_000_0000">000-0000</string>
    <string name="none">None</string>
    <string name="transaction">Transaction</string>
    <string name="maintenance">Maintenance</string>
    <string name="ManualAct">Manual Act</string>
    <string name="manualActDescription">Manual Act should ONLY be used for cases where another act cannot be used, when used please be cautious to avoid possible errors. All Manual Acts will be marked with [M].</string>
    <string name="dateformat">DD/MM/YYYY</string>
    <string name="writeCommentHere">Write comment here</string>
    <string name="write_address">Write address</string>
    <string name="Act">Act</string>
    <string name="Note">Note</string>
    <string name="Invoicedate">Invoice date</string>
    <string name="Affiliatedlab">Affiliated lab</string>
    <string name="Status" />
    <string name="Maintencestatus">Maintence status</string>
    <string name="Lastfilled">Last filled</string>
    <string name="Address">Address</string>
    <string name="note">Note</string>


    <string-array name="act_array">
        <item>Internal</item>
        <item>Sent out</item>
        <item>Returned</item>
        <item>Linked</item>
        <item>Unlinked</item>
        <item>Maint need</item>
        <item>Maint compl</item>
        <item>Sold</item>
        <item>Discarded</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="affiliated">Affilated lab:</string>
    <string name="maintenanceType">Maintenance type</string>
    <string name="disposeType">Dispose type</string>
    <string name="details">Details</string>
    <string name="nr">nr</string>
    <string name="Confirm">Confirm</string>
    <string name="can_you_confirm">Can you confirm?</string>

    <string name="login_id_formatError_message">Invalid ID format</string>
    <string name="login_id_loginError_message">Unregistered ID, contact an administrator</string>

    <string name="login_unverified_warning_message">This device has not been verified. Contact an administrator to verify the device.</string>
    <string name="actCap">Act</string>

</resources>