<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvInventoryNr"
                    android:tag="@string/inv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@color/white"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@string/hashNr"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.14" />

                <TextView
                    android:id="@+id/tvInventoryLocation"
                    android:tag="@string/adr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@color/white"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@string/location"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvInventoryNr"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.14" />


                <TextView
                    android:id="@+id/tvInventoryClient"
                    android:tag="@string/cId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@color/white"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@string/client"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvInventoryLocation"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.14" />

                <TextView
                    android:id="@+id/tvInventoryLastFill"
                    android:tag="@string/lFi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@color/white"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@string/last_filled"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvInventoryClient"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.14" />

                <TextView
                    android:id="@+id/tvInventoryStatus"
                    android:tag="@string/act"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@color/white"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@string/status"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvInventoryLastFill"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.14" />

                <TextView
                    android:id="@+id/tvInventoryInvoice"
                    android:tag="@string/ivo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@color/white"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@string/inovice"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvInventoryStatus"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.14" />

                <TextView
                    android:id="@+id/tvInventoryNoti"
                    android:tag="@string/cmt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@color/white"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@string/notifcations"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvInventoryInvoice"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.14" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

