<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MiniInventoryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dip"
    tools:context=".ui.inventory.MiniInventoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleFilterSearchLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvInventoryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/inventory"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFilterSearchLayout">

        <TextView
            android:id="@+id/tvInventoryNr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dip"
            android:layout_marginBottom="1dip"
            android:background="@color/white"
            android:gravity="start"
            android:maxLines="1"
            android:padding="3dip"
            android:tag="@string/id"
            android:text="@string/hashNr"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvInventoryClient"
            app:layout_constraintHorizontal_weight="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvInventoryClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dip"
            android:layout_marginBottom="1dip"
            android:background="@color/white"
            android:gravity="start"
            android:maxLines="1"
            android:padding="3dip"
            android:tag="@string/cli"
            android:text="@string/client"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvInventoryLastFill"
            app:layout_constraintHorizontal_weight="0.35"
            app:layout_constraintStart_toEndOf="@+id/tvInventoryNr"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInventoryLastFill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dip"
            android:layout_marginBottom="1dip"
            android:background="@color/white"
            android:gravity="start"
            android:maxLines="1"
            android:padding="3dip"
            android:tag="@string/lFi"
            android:text="@string/last_filled"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvInventoryNoti"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvInventoryClient"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInventoryNoti"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dip"
            android:background="@color/white"
            android:gravity="start"
            android:maxLines="1"
            android:padding="3dip"
            android:tag="@string/maint"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvInventoryLastFill"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/InventoryRecycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:itemCount="10"
        tools:listitem="@layout/mini_inventory_recycler_item" />

</androidx.constraintlayout.widget.ConstraintLayout>