<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvInventoryNr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:layout_marginEnd="2dip"
            android:background="@color/white"
            android:gravity="start"
            android:maxLines="1"
            android:padding="3dip"
            android:tag="@string/id"
            android:text="@string/hashNr"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvInventoryClient"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvInventoryClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:layout_marginEnd="2dip"
            android:background="@color/white"
            android:gravity="start"
            android:maxLines="1"
            android:padding="3dip"
            android:tag="@string/cli"
            android:text="@string/client"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clInventoryLastFill"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvInventoryNr"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clInventoryLastFill"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dip"
            android:layout_marginEnd="2dip"
            android:background="@color/white"
            android:gravity="start"
            android:tag="@string/lFi"
            android:text="@string/last_filled"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clInventoryNoti"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvInventoryClient"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvInventoryLastFill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="start"
                android:maxLines="1"
                android:padding="3dip"
                android:tag="@string/lFi"
                android:text="@string/last_filled"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivInventoryLastFill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivInventoryLastFill"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/battery100"
                android:layout_margin="2dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvInventoryLastFill"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clInventoryNoti"
            android:layout_width="35dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dip"
            android:background="@color/white"
            android:gravity="start"
            android:tag="@string/maint"
            android:text="@string/notifcations"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clInventoryLastFill"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/ivNotific"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                android:src="@drawable/maintenance_warn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

